--- a/index.html
+++ b/index.html
@@ -3,11 +3,27 @@
     <head>
         <title>My Link Page</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <style>
+            body {
+                background-image: url("images/background.png");
+                background-size: cover;
+                background-position: center;
+            }
+        </style>
     </head>
     <body>
-        <!-- Put Your Code -->
-        <img src="images/example.png" alt="Example Image">
-        <button onclick= "window.location.href='https://www.instagram.com';">My Instagram</button>
-        <script src="script.js"></script>
+        <header>
+            <h1>My Link Page</h1>
+        </header>
+        <main>
+            <img src="images/Group1.png" alt="bio" width="300" height="800">
+            <div class="buttons">
+                <button onclick="window.location.href='https://www.instagram.com';">My Instagram</button>
+                <button onclick="window.location.href='https://search.naver.com/search.naver?where=nexearch&sm=top_hty&fbm=1&ie=utf8&query=%EA%B3%A8%ED%94%84';">My Hobby</button>
+            </div>
+        </main>
+        <!-- <footer>
+            <p>&copy; 2023 My Link Page</p>
+        </footer> -->
     </body>
 </html>
